--- a/language/i18n_it.json
+++ b/language/i18n_it.json
@@ -402,28 +402,28 @@
     "scene_name_already_exists": "nome già in uso",
     "pind_atag": "ATAG",
     "ac_up_and_down": "Flusso d’aria",
-    "pind_function_fry": "Frittura/Lavoro",
+    "pind_function_fry": "Frittura/Wok",
     "service_ticket_create_check_userInfo": "Per creare un ticket di servizio, inserisci le informazioni di contatto aggiuntive dell'utente.",
     "service_go_user_profile": "VAI ALLE IMPOSTAZIONI UTENTE",
     "room_edit_save_no_network": "La rete non è valida",
-    "add_washing_machine": "1. Quando la macchina è spenta, tenere premuti contemporaneamente i due pulsanti più a destra，accendere il dispositivo.\n2. Premi il pulsante \"Settings\" per accedere al menu Impostazioni e sposta la manopola sulla sezione \"Wi-Fi settings\". Entra nella sezione premendo il pulsante.\n3. Premi il pulsante \"Wi-Fi On/Off\\ e sposta la manopola sull'opzione \"On\\ premi il pulsante \"Salva\".\n4. Torna alla sezione \"Wi-Fi settings\", premi il pulsante \"Connection setup\"; avrai 5 minuti per connettere il tuo apparecchio alla rete.",
+    "add_washing_machine": "1. Quando la macchina è spenta, tenere premuti i due pulsanti più a destra e contemporaneamente accendere la macchina. 2. Premere il pulsante \"Impostazioni\" per accedere al menu Impostazioni e spostare la manopola sulla sezione \"Impostazioni Wi-Fi\". Accedere alla sezione premendo il pulsante. 3. Premere il pulsante \"Wi-Fi On/Off\" e spostare la manopola sull'opzione \"On\", quindi premere il pulsante \"Salva\". 4. Tornare alla sezione \"Impostazioni Wi-Fi\" e premere il pulsante \"Impostazione connessione\"; si hanno 5 minuti di tempo per collegare l'apparecchio alla rete.",
     "paring_set_up_appliance_label": "Configura le impostazioni Wi-Fi dell'apparecchio domestico e associalo al tuo account.",
-    "paring_appliances_label": "Associare l'appliance al proprio account. L'apparecchio ha le impostazioni Wi-Fi domestiche già configurate.",
+    "paring_appliances_label": "Associare l'apparecchio al proprio account. L'apparecchio ha già configurato le impostazioni Wi-Fi di casa.",
     "paring_set_up_appliances_title": "CONFIGURAZIONE DELL'APPARECCHIO",
     "upgrade_fail": "Aggiornamento del firmware non riuscito",
     "device_not_online": "dispositivo non online",
-    "device_not_PAIR_mode": "Il dispositivo non entra in modalità ASSOCIATO",
+    "device_not_PAIR_mode": "Il dispositivo non entra in modalità ASSOCIAZIONE",
     "add_appliance_duplicate_binding": "Il dispositivo è già associato a XXX",
-    "pind_stopped": "Arrestato",
+    "pind_stopped": "Interrotto",
     "pind_ended": "Terminato",
     "pind_cooking_timer": "Timer di cottura",
     "firmware_update": "Aggiornamento del firmware",
     "firmware_fail_end": "Aggiornamento non riuscito",
-    "firmware_fail_hint": "Il processo di aggiornamento del firmware non è andato a buon fine. Riprovare in seguito. Se questo errore si ripete più volte, si prega di aprire un ticket all'assistenza. Non preoccupatevi, il vostro apparecchio continuerà a funzionare normalmente.",
+    "firmware_fail_hint": "Il processo di aggiornamento del firmware non è riuscito. Riprova più tardi. Se questo errore si ripete più volte, puoi creare un ticket di assistenza. I tuoi elettrodomestici continueranno a funzionare normalmente.",
     "firmware_hint_mid": "\"Modalità di accoppiamento\"",
     "firmware_update_title": "L'ultimo firmware è già installato su tutti gli apparecchi.",
     "firmware_update_sub_title": "Aggiorniamo il firmware dell'apparecchio regolarmente, in modo da poterlo migliorare per voi. Aggiornando il firmware, otterrete gli ultimi aggiornamenti.",
-    "open_service_ticket": "APRI UN TICKET ALL'ASSISTENZA",
+    "open_service_ticket": "APRI TICKET DI ASSISTENZA",
     "details": "Dettagli",
     "hide_details": "Nascondi Dettagli",
     "close": "CHIUDI",
@@ -431,7 +431,7 @@
     "share_device": "Dispositivo condiviso",
     "tap_add_name_hint": "Tocca per inserire il nome",
     "laundry_room": "Lavanderia",
-    "add_washing_machine_pair": "1. Quando la macchina è spenta, tenere premuti contemporaneamente i due pulsanti più a destra e accendere il dispositivo. 2. Premere il pulsante \"Impostazioni\" per accedere al menu Impostazioni e spostare la manopola sulla sezione \"Wi-Fi settings\". Entra nella sezione premendo il pulsante. 3. Nella sezione \"Wi-Fi settings\", sposta la manopola per trovare e premere il pulsante \"Add device\". 4. Hai 3 minuti per aggiungere il dispositivo.",
+    "add_washing_machine_pair": "1. Quando la macchina è spenta, tenere premuti contemporaneamente i due pulsanti più a destra per accendere la macchina. 2. Premere il pulsante \"Impostazioni\" per accedere al menu Impostazioni e spostare la manopola sulla sezione \"Impostazioni Wi-Fi\". Accedere alla sezione premendo il pulsante . 3. Nella sezione \"Impostazioni Wi-Fi\", selezionare la manopola e premere il pulsante \"Aggiungi dispositivo\". 4. Si hanno 3 minuti di tempo per aggiungere il dispositivo.",
     "light": "Luce",
     "timer": "Timer",
     "fan_level": "Livello ventola",
@@ -3631,21 +3631,21 @@
     "recipe_under_##_mins": "Meno di ## minuti",
     "recipe_more_than_##_mins": "Più di ## minuti",
     "recipe_assistant_more_options": "Perfezionare i requisiti per raccomandazioni più precise. (Facoltativo)",
-    "our_recommendation": "La nostra raccomandazione",
+    "our_recommendation": "La nostra Raccomandazione",
     "no_search_results": "Nessun risultato di ricerca",
     "let_us_try_another_word": "Proviamo con un'altra parola.",
-    "no_device_search": "Nessun dispositivo è stato cercato",
+    "no_device_search": "Nessun Dispositivo è stato cercato",
     "no_device_confirm": "Si prega di confermare che il gateway è effettivamente collegato al sistema di condizionamento dell’aria",
     "cook_with_##": "cucinare con ##",
-    "asko_oven_set_time_date": "Seleziona la data, l'ora e il formato dell'ora per il tuo forno.",
-    "asko_oven_set_language": "Seleziona la lingua per il tuo forno.",
-    "asko_oven_set_settings": "Imposta l'ora e la lingua del tuo forno.",
-    "asko_oven_time_date_automatic": "Ora - Data automatico",
+    "asko_oven_set_time_date": "Selezionare la data, l'ora e il formato dell'ora del forno.",
+    "asko_oven_set_language": "Selezionare la lingua del forno.",
+    "asko_oven_set_settings": "Impostare l'ora e la lingua del forno.",
+    "asko_oven_time_date_automatic": "Ora - Data automatica",
     "select_at_least_one_oven": "Seleziona almeno un forno da inviare.",
     "the_limit_has_been_reached": "Non può essere modificato, è stato raggiunto il limite.",
     "let_us_try_other_options": "Proviamo altre opzioni.",
     "found_##_search_results": "Abbiamo trovato ## risultati di ricerca per te.",
-    "wm_program_mode_time_care_1_desc": "Quando questa funzione è attivata, il programma di lavaggio verrà eseguito con una durata di lavaggio più breve.",
+    "wm_program_mode_time_care_1_desc": "Quando questa funzione è attivata, il programma di lavaggio viene eseguito con una durata più breve.",
     "asko_oven_adaptive_brightness": "Luminosità adattiva",
     "online_tip": "online",
     "atw_tip": "ATW",
@@ -3656,28 +3656,28 @@
     "weekly_key": "Settimanale",
     "all_day": "tutto il giorno",
     "asko_oven_display_setting_content": "Configura le impostazioni per il display del tuo forno.",
-    "asko_oven_brightness_content": "La luminosità del display e dei tasti del forno si regola automaticamente in base all'illuminazione della stanza.",
-    "asko_oven_display_content": "Imposta la dimensione del carattere per il testo sul display del vino.",
+    "asko_oven_brightness_content": "La luminosità del display e dei tasti del forno viene regolata automaticamente in base all'illuminazione dell'ambiente.",
+    "asko_oven_display_content": "Impostare la dimensione dei caratteri per il testo sul display del forno.",
     "asko_oven_show_date_content": "Visualizzare o meno la data sullo schermo dell'orologio.",
     "asko_oven_show_bg_content": "Visualizzare o meno gli sfondi sul display del forno.",
     "asko_oven_light_setting_content": "Imposta la temperatura del colore, la luminosità e il tempo di accensione delle luci in base alle tue preferenze.",
     "asko_oven_stage_light_content": "Illuminazione posizionata sotto il pannello di controllo del forno per illuminare la pietanza quando viene tolta dalla cavità.",
-    "asko_oven_stage_light": "Luce da palcoscenico",
+    "asko_oven_stage_light": "Luce scenica",
     "asko_oven_color_temperature": "TEMPERATURA DEL COLORE",
     "asko_oven_color_temperature_content": "Imposta la temperatura del colore delle luci della cavità.",
     "asko_oven_brightness_light_content": "Impostare la luminosità delle luci della cavità.",
-    "asko_oven_time_out_content": "Imposta per quanto tempo le luci del vano motore devono rimanere accese dopo l'attivazione.",
+    "asko_oven_time_out_content": "Impostare per quanto tempo le luci della cavità devono rimanere accese dopo l'attivazione.",
     "asko_oven_control_settings": "Impostazioni di controllo",
-    "asko_oven_control_setting_content": "Imposta la luminosità dello schermo del tuo dispositivo, cambia il tema del colore, la dimensione del carattere e imposta quando lo schermo del tuo dispositivo entra in modalità standby.",
-    "asko_oven_camera_content": "Utilizzando la telecamera, è possibile monitorare la parabola senza dover aprire la porta.",
+    "asko_oven_control_setting_content": "Configurare le impostazioni per le diverse funzionalità del forno.",
+    "asko_oven_camera_content": "Utilizzando la telecamera, è possibile monitorare il piatto senza dover aprire la porta.",
     "asko_oven_proximity_sensor": "Sensore di prossimità",
     "asko_oven_proximity_sensor_content": "Quando viene rilevato un movimento vicino al forno, la luce e il display si comportano in base alle impostazioni specificate di seguito.",
-    "asko_oven_distant_user_detected": "UTENTE REMOTO RILEVATO",
-    "asko_oven_display_change_to": "Cambia a la visualización de",
+    "asko_oven_distant_user_detected": "RILEVATO UTENTE DISTANTE",
+    "asko_oven_display_change_to": "Il display cambia in",
     "asko_oven_light_change_to": "Le luci cambiano in",
     "asko_oven_door_sensor_wake_up": "Risveglio del sensore della porta",
     "asko_oven_door_sensor_wake_up_content": "Il forno può attivarsi se la tua presenza viene rilevata dal sensore di prossimità e all'apertura dello sportello. Tieni presente che ciò aumenterà il consumo di energia.",
-    "asko_oven_brand_splash": "Splash del marchio",
+    "asko_oven_brand_splash": "Brand splash",
     "asko_oven_brand_splash_content": "Mostra il video promozionale del marchio durante l'avvio e l'arresto.",
     "jchoem_privacy_desc": "Si prega di notare che Johnson Controls non gestisce o controlla questa Applicazione. I tuoi dati saranno trattati in conformità con l'Informativa sulla privacy di terze parti, fornita nella schermata successiva.",
     "asko_oven_inactivity_time_out": "TIME-OUT PER INATTIVITÀ",
@@ -3686,15 +3686,15 @@
     "asko_oven_duration_of_clock_content": "Imposta per quanto tempo è visibile la schermata dell'orologio.",
     "dw_dish_assist": "Assistente per il lavaggio dei piatti",
     "dw_help_support": "Supporto",
-    "dryer_link": "Collegamento dell'asciugatrice",
-    "dryer_link_tips": "Con la funzione pelucchi dell'asciugatrice attivata, il programma di lavaggio viene trasferito automaticamente all'asciugatrice selezionata al termine del lavaggio.",
+    "dryer_link": "Dryer link",
+    "dryer_link_tips": "Con la funzione Dryer link attivata, il programma di lavaggio viene trasferito automaticamente all'asciugatrice selezionata al termine del lavaggio.",
     "enable_on_this_appliance": "Abilita su questo apparecchio",
     "dryer_link_notes": "Per collegare la lavatrice e l'asciugatrice assicurati che la connessione sia configurata sull'asciugatrice.",
-    "asko_oven_mode_setting_content": "È possibile impostare modalità speciali per diverse occasioni. Configura per ogni modalità come deve comportarsi quando la modalità è attiva.",
+    "asko_oven_mode_setting_content": "È possibile impostare modalità speciali per diverse occasioni. Per ogni modalità è possibile configurare il comportamento da tenere quando la modalità è attiva.",
     "steam_disinfection": "Disinfezione a vapore",
     "asko_oven_light_brightness": "Luminosità della luce",
     "asko_oven_sound_alarms": "Suoni / Allarmi",
-    "asko_oven_eco_mode_content": "Aiuta a ridurre il consumo di energia e a risparmiare elettricità. L'apparecchio continuerà a funzionare, mentre le funzioni extra come luce, display, prossimità e sensore porta verranno disattivate.",
+    "asko_oven_eco_mode_content": "Contribuisce a ridurre il consumo energetico e a risparmiare elettricità. L'apparecchio continuerà a funzionare, mentre le funzioni extra come la luce, il display, il sensore di prossimità e la porta saranno disattivate.",
     "dw_error_desc_f11": "Uscita dell'acqua",
     "dw_error_desc_f12": "Ingresso dell'acqua",
     "dw_error_desc_f40": "Valvola di ingresso",
@@ -3707,7 +3707,7 @@
     "asko_oven_sabbath_mode_content": "L'apparecchio passerà alla modalità Sabbath alla data, ora e durata impostate. La funzione di blocco sarà disabilitata durante la modalità Sabbath.",
     "asko_oven_activate_weekly": "Attiva settimanalmente",
     "asko_oven_sabbath_bottom_content": "Per disattivare la modalità Sabbath, premere per 3 secondi l'icona Lucchetto sul display del forno.",
-    "asko_oven_during_sabbath_mode": "DURANTE LA MODALITÀ SABATO",
+    "asko_oven_during_sabbath_mode": "DURANTE LA MODALITÀ SABBATH",
     "asko_oven_during_sabbath_mode_content": "Durante la modalità Sabbath è possibile avviare e arrestare automaticamente un programma di cottura.",
     "asko_oven_program": "Programma forno",
     "asko_oven_program_setup": "Impostazione del programma",
@@ -3730,8 +3730,8 @@
     "target_key": "obiettivo",
     "asko_oven_factory_reset_content": "L'apparecchio può essere ripristinato alle impostazioni di fabbrica.",
     "invalid_input": "Input non valido.",
-    "key": "Italian 意大利语",
-    "filename": "i18n_it.json",
+    "key": "Inglese",
+    "filename": "i18n_en.json",
     "asko_td_eco_cotton": "Cotone ECO",
     "asko_td_eco_cotton_us": "Normale",
     "asko_td_storage_dry_cotton": "Conservazione del cotone asciutto",
@@ -3756,20 +3756,20 @@
     "gorenje_td_cotton_storage": "Conservazione del cotone",
     "gorenje_td_standard": "Standard",
     "gorenje_td_iron": "Stiro",
-    "gorenje_td_mix": "Mescolare",
+    "gorenje_td_mix": "Mix",
     "gorenje_td_synthetics": "Sintetici",
     "gorenje_td_wool": "Lana",
     "gorenje_td_pillow": "Cuscino",
-    "gorenje_td__air_refresh": "Rinfresco dell'aria",
+    "gorenje_td__air_refresh": "Air Refresh",
     "gorenje_td_bedding": "Biancheria da letto",
     "gorenje_td_baby": "Bambino",
-    "gorenje_td_sensitive": "Sensibile",
+    "gorenje_td_sensitive": "Delicati",
     "gorenje_td_shirts": "Camicie",
     "gorenje_td_sports": "Abbigliamento sportivo",
     "gorenje_td_time": "Tempo",
-    "gorenje_td_steam_refresh": "Rinfrescante a vapore",
+    "gorenje_td_steam_refresh": "Steam Refresh",
     "gorenje_td_fast89": "Veloce89",
-    "gorenje_td_extra_hygiene": "Igiene supplementare",
+    "gorenje_td_extra_hygiene": "Extra Igiene",
     "gorenje_td_towels": "Asciugamani",
     "gorenje_td_kids_toys": "Giocattoli per bambini",
     "gorenje_td_jackets_coats": "Giacche/cappotti",
@@ -3777,23 +3777,23 @@
     "gorenje_td_cotton_underwear": "Biancheria intima di cotone",
     "gorenje_wm_eco_40_60": "Eco 40-60",
     "gorenje_wm_cotton_white": "Cotone bianco",
-    "gorenje_wm_colour": "Colore",
-    "gorenje_wm_wool_hand": "Lana&mano",
+    "gorenje_wm_colour": "Colorati",
+    "gorenje_wm_wool_hand": "Lana&delicati",
     "gorenje_wm_mix_synthetics": "Mix/sintetici",
     "gorenje_wm_extra_hygiene": "Igiene supplementare",
     "gorenje_wm_speed_20": "Velocità 20'",
     "gorenje_wm_power_59_32": "Potenza 59'/32'",
     "gorenje_wm_daily": "Quotidiano",
-    "gorenje_wm_sports": "Gli sport",
+    "gorenje_wm_sports": "Sport",
     "gorenje_wm_baby": "Bambino",
     "gorenje_wm_pets": "Animali domestici",
     "gorenje_wm_shirts": "Camicie",
-    "gorenje_wm_drum_clean": "Tamburo pulito",
+    "gorenje_wm_drum_clean": "Cestello pulito",
     "gorenje_wm_spin": "Rotazione",
     "gorenje_wm_drain": "Drenare",
     "gorenje_wm_rinse_softening": "Risciacquo e ammorbidente",
-    "gorenje_wm_softening": "Ammorbidimento",
-    "gorenje_wm_drum_clean_dry": "Tamburo pulito e asciutto",
+    "gorenje_wm_softening": "Ammorbidente",
+    "gorenje_wm_drum_clean_dry": "Cestello pulito e asciutto",
     "gorenje_wm_airdry": "Aria secca",
     "gorenje_wm_stain_expert": "Macchie",
     "gorenje_wm_pillow": "Cuscino",
@@ -3818,8 +3818,8 @@
     "gorenje_wm_ads_daily_wash": "Lavaggio quotidiano",
     "gorenje_wm_ads_wm_pillow": "Cuscino",
     "gorenje_wm_ads_jeans": "Jeans",
-    "gorenje_wm_ads_new_clothes": "Vestiti nuovi",
-    "gorenje_wm_ads_dark_clothes": "Vestiti scuri",
+    "gorenje_wm_ads_new_clothes": "Abiti nuovi",
+    "gorenje_wm_ads_dark_clothes": "Abiti scuri",
     "gorenje_wm_ads_kids_toys": "Giocattoli per bambini",
     "gorenje_wm_ads_kids": "Bambini",
     "gorenje_wm_ads_swimwear": "Costumi da bagno",
@@ -3828,10 +3828,10 @@
     "gorenje_wm_ads_underwear": "Biancheria intima",
     "gorenje_wm_ads_kitchen_program": "Programma di cucina",
     "gorenje_wm_ads_whitening": "Sbiancamento",
-    "gorenje_wm_ads_activewear": "Abbigliamento attivo",
+    "gorenje_wm_ads_activewear": "Abbigliamento sportivo",
     "gorenje_wm_ads_curtains": "Tende",
     "gorenje_wm_ads_hygiene": "Igiene",
-    "On": "オン",
+    "On": "Acceso",
     "can_not_start_eco": "Il dispositivo non supporta ECO in stato di spegnimento, impossibile avviare ECO",
     "current_mode_not_support_eco": "La modalità corrente non supporta ECO",
     "device_standby_can_not_start_eco": "Il dispositivo è in modalità standby, impossibile avviare ECO",
@@ -4023,5 +4023,7 @@
     "CL_DV_TD_child_lock_tip": "Il blocco bambini disattiva i pulsanti sul pannello di controllo dell'elettrodomestico per impedire ai bambini di avviare o modificare accidentalmente un ciclo. ",
     "API Testing": "Test API",
     "CL_DV_DW_water_energy": "Acqua ed energia",
-    "CL_DV_DW_light_display": "Luce e visualizzazione"
+    "CL_DV_DW_light_display": "Luce e visualizzazione",
+    "CL_DV_HOB_how_to_connect_accessories": "Come collegare gli accessori",
+    "CL_CF_SK_amount_of_servings": "Quantità di porzioni"
 }
