--- a/language/i18n_nb.json
+++ b/language/i18n_nb.json
@@ -4023,5 +4023,7 @@
     "CL_DV_TD_child_lock_tip": "Barnesikring deaktiverer knappene på apparatets kontrollpanel for å forhindre at barn starter eller endrer en syklus ved et uhell. ",
     "API Testing": "API-testing",
     "CL_DV_DW_water_energy": "Vann og energi",
-    "CL_DV_DW_light_display": "Lys og skjerm"
+    "CL_DV_DW_light_display": "Lys og skjerm",
+    "CL_DV_HOB_how_to_connect_accessories": "Slik kobler du til tilbehør",
+    "CL_CF_SK_amount_of_servings": "Antall porsjoner"
 }
