--- a/language/i18n_nl.json
+++ b/language/i18n_nl.json
@@ -4023,5 +4023,7 @@
     "CL_DV_TD_child_lock_tip": "Met het kinderslot worden de knoppen op het bedieningspaneel van het apparaat uitgeschakeld, zodat kinderen niet per ongeluk een programma kunnen starten of wijzigen. ",
     "API Testing": "API-testen",
     "CL_DV_DW_water_energy": "Water & Energie",
-    "CL_DV_DW_light_display": "Licht & Display"
+    "CL_DV_DW_light_display": "Licht & Display",
+    "CL_DV_HOB_how_to_connect_accessories": "Hoe u accessoires aansluit",
+    "CL_CF_SK_amount_of_servings": "Aantal porties"
 }
