--- a/language/i18n_pl.json
+++ b/language/i18n_pl.json
@@ -4023,5 +4023,7 @@
     "CL_DV_TD_child_lock_tip": "Blokada dziecięca wyłącza przyciski na panelu sterowania urządzenia, zapobiegając przypadkowemu uruchomieniu lub zmianie cyklu przez dzieci. ",
     "API Testing": "Testowanie API",
     "CL_DV_DW_water_energy": "Woda i energia",
-    "CL_DV_DW_light_display": "Światło i wyświetlacz"
+    "CL_DV_DW_light_display": "Światło i wyświetlacz",
+    "CL_DV_HOB_how_to_connect_accessories": "Instrukcja podłączania akcesoriów",
+    "CL_CF_SK_amount_of_servings": "Ilość porcji"
 }
