--- a/language/i18n_vi.json
+++ b/language/i18n_vi.json
@@ -4023,5 +4023,7 @@
     "CL_DV_TD_child_lock_tip": "Khóa trẻ em sẽ vô hiệu hóa các nút trên bảng điều khiển của thiết bị để ngăn trẻ em vô tình khởi động hoặc thay đổi chu trình. ",
     "API Testing": "Kiểm tra API",
     "CL_DV_DW_water_energy": "Nước và Năng lượng",
-    "CL_DV_DW_light_display": "Ánh sáng & Màn hình"
+    "CL_DV_DW_light_display": "Ánh sáng & Màn hình",
+    "CL_DV_HOB_how_to_connect_accessories": "Cách kết nối phụ kiện",
+    "CL_CF_SK_amount_of_servings": "Số lượng khẩu phần ăn"
 }
