--- a/language/i18n_bg.json
+++ b/language/i18n_bg.json
@@ -4023,5 +4023,7 @@
     "CL_DV_TD_child_lock_tip": "Защитата за деца деактивира бутоните на контролния панел на уреда, за да предотврати случайно стартиране или промяна на цикъл от деца. ",
     "API Testing": "API тестване",
     "CL_DV_DW_water_energy": "Вода и енергия",
-    "CL_DV_DW_light_display": "Светлина и дисплей"
+    "CL_DV_DW_light_display": "Светлина и дисплей",
+    "CL_DV_HOB_how_to_connect_accessories": "Как да свържете аксесоари",
+    "CL_CF_SK_amount_of_servings": "Количество порции"
 }
