--- a/language/i18n_cs.json
+++ b/language/i18n_cs.json
@@ -4023,5 +4023,7 @@
     "CL_DV_TD_child_lock_tip": "Dětská pojistka deaktivuje tlačítka na ovládacím panelu spotřebiče, aby děti nemohly náhodně spustit nebo změnit cyklus. ",
     "API Testing": "Testování API",
     "CL_DV_DW_water_energy": "Voda a energie",
-    "CL_DV_DW_light_display": "Světlo a displej"
+    "CL_DV_DW_light_display": "Světlo a displej",
+    "CL_DV_HOB_how_to_connect_accessories": "Jak připojit příslušenství",
+    "CL_CF_SK_amount_of_servings": "Množství porcí"
 }
