--- a/language/i18n_en.json
+++ b/language/i18n_en.json
@@ -3718,7 +3718,7 @@
     "asko_oven_ambient_sounds_content": "For example starting and stopping a program.",
     "asko_oven_navigation_content": "For example key sounds.",
     "dw_smart_dry": "Smart Dry",
-    "dw_remote_guide_hx": "Please press#and then@.\\nAPP will flash on the display.",
+    "dw_remote_guide_hx": "Please press#and then@.\nAPP will flash on the display.",
     "dw_remote_guide_eu": "Please press%button on the control panel to enable it",
     "atw_no_device_confirm_first": "1. Please ensure network stability.",
     "atw_no_device_confirm_second": "2. Please ensure the reliability of the connection of the air conditioning system.",
@@ -4023,5 +4023,7 @@
     "CL_DV_TD_child_lock_tip": "Child lock disables the buttons on the control panel of the appliance to prevent children from accidentially starting or changing a cycle. ",
     "API Testing": "API Testing",
     "CL_DV_DW_water_energy": "Water & Energy",
-    "CL_DV_DW_light_display": "Light & Display"
+    "CL_DV_DW_light_display": "Light & Display",
+    "CL_DV_HOB_how_to_connect_accessories": "How-To Connect Accessories",
+    "CL_CF_SK_amount_of_servings": "Amount of servings"
 }
