--- a/language/i18n_ms.json
+++ b/language/i18n_ms.json
@@ -4023,5 +4023,7 @@
     "CL_DV_TD_child_lock_tip": "Kunci kanak-kanak menyahdayakan butang pada panel kawalan perkakas untuk mengelakkan kanak-kanak daripada memulakan atau menukar kitaran secara tidak sengaja. ",
     "API Testing": "Ujian API",
     "CL_DV_DW_water_energy": "Air & Tenaga",
-    "CL_DV_DW_light_display": "Cahaya & Paparan"
+    "CL_DV_DW_light_display": "Cahaya & Paparan",
+    "CL_DV_HOB_how_to_connect_accessories": "Bagaimana-Untuk Menyambung Aksesori",
+    "CL_CF_SK_amount_of_servings": "Jumlah hidangan"
 }
